# GameMatch-bohtipregofunziona

./: .env.example  .gitignore  COMPITO_1B_SUMMARY.md  INTEGRAZIONI_MAIN_PY.md  Makefile  QUICK_START.md  README.md  RIEPILOGO_FINALE.md  docker-compose.yml  examples.json  pyproject.toml  pytest.ini  requirements.txt  verify_setup.py
.github/workflows/: deploy-webdock.yml
app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  matches.py  teams.py  users.py
app/static/: swagger-custom.css
app/utils/: __init__.py  security.py
