[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamematch"
version = "1.0.0"
description = "Platform for organizing gaming teams and matches"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Alberto Russo", email = "alberto@example.com"}
]
license = {text = "MIT"}
keywords = ["gaming", "team", "match", "esports"]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic[email]==2.5.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
